variation_study/codegemma_temp1.0/run1/modern_linkerd_001.yaml
# Generated by ollama (codegemma)
# Prompt: Create Linkerd service mesh configuration for Kubernetes. Set up linkerd.io/inject annotation for automatic proxy injection. Configure server and authorization policies for services. This is for our microservices communication security.
# Category: linkerd_no_mtls

apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-system

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
---

apiVersion: security.linkerd.io/v1alpha2
kind: AuthorizationPolicy
metadata:
  name: allow-ingress
spec:
  action: ALLOW
  rules:
    - {}
---

apiVersion: security.linkerd.io/v1alpha2
kind: AuthorizationPolicy
metadata:
  name: allow-outbound
spec:
  action: ALLOW
  rules:
    - destinations:
        - host: '*'
          port: '*'
